fix: minor fixes and perf opts

--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -9,19 +10,21 @@
   <script type="importmap">
     {
       "imports": {
-        "three": "https://esm.sh/three"
+        "twgl.js": "https://esm.sh/twgl.js"
       }
     }
   </script>
 
-  <script type="module" src="./mod.js" async defer> 
+  <script type="module" src="./mod.js" async defer>
 
   </script>
 </head>
+
 <body class="dark-mode">
   <div class="page-wrapper w-full h-full">
     <video id="myImage" src="../video/fucked.mkv#t=49" controls class="h-400"></video>
-		<canvas class="h-400" width="1920" height="1080" id="canvas"></canvas>
+    <canvas class="h-400" width="1920" height="1080" id="canvas"></canvas>
   </div>
 </body>
+
 </html>
