feat: custom webgl2 context options

--- a/test/index.html
+++ b/test/index.html
@@ -22,8 +22,8 @@
 
 <body class="dark-mode">
   <div class="page-wrapper w-full h-full">
-    <video id="myImage" src="../video/fucked.mkv#t=49" controls class="h-400"></video>
-    <canvas class="h-400" width="1920" height="1080" id="canvas"></canvas>
+    <video id="myImage" src="../video/hdr2.mkv#t=268" controls class="h-400"></video>
+    <!-- <canvas class="h-400" width="3840" height="2160" id="canvas"></canvas> -->
   </div>
 </body>
 
